# RVR

./: .gitignore  CMakeLists.txt  README.md  build.sh
Practica2.1/: .ejercicio1.cc.swp  CMakeLists.txt  ejercicio1.cc  ejercicio2.cc  ejercicio3.cc  ejercicio4.cc  ejercicio5.cc  ejercicio6.cc  ejercicio7.cc  utils.cc  utils.h
Practica2.2/: CMakeLists.txt  ejercicio1.cc
Practica2.2/replicacion-chat/: CMakeLists.txt  Chat.cc  ChatClient.cc  Socket.cc  utils.h
